--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Grue42
+name: TechBytes
 
 # Short bio or description (displayed in the header)
-description: EE
+description: Byte-sized tech reminders to quickly refresh my memory.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
